import { render } from '@testing-library/react'
import Card from '../components/card'
import Homepage from '../components/homepage'

it('renders homepage unchanged', () => {
    const { container } = render(<Homepage />)
    expect(container).toMatchSnapshot()
  })

it('renders card unchanged', () => {
  const { container } = render(<Card />)
  expect(container).toMatchSnapshot()
})