// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders card unchanged 1`] = `
<div>
  <div
    class="mx-auto mb-28 w-2/5 h-1/2 min-h-[500px] bg-card_bg rounded-lg p-5 shadow-lg drop-shadow-md"
  >
    <div
      class="flex mb-5 gap-5"
      data-testid="user"
    >
      <img
        alt=""
        class="w-[50px] h-[50px] rounded-[50%]"
      />
      <p
        class="my-auto text-left"
      />
    </div>
    <img
      alt=""
      class="rounded-lg w-fit mb-5"
      data-testid="image"
    />
    <div
      class="flex gap-5 mb-5"
      data-testid="buttons"
    >
      <div
        class="flex gap-1"
      >
        <svg
          class="text-[30px] cursor-pointer rounded-lg align-middle text-gray-800 hover:opacity-75"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z"
          />
        </svg>
        <p
          class="my-auto"
        >
          100k
        </p>
      </div>
      <div
        class="flex gap-1"
      >
        <svg
          class="text-[30px] cursor-pointer rounded-lg align-middle text-gray-800 hover:opacity-75"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 9.5a1.5 1.5 0 11-3 0v-6a1.5 1.5 0 013 0v6zM14 9.667v-5.43a2 2 0 00-1.105-1.79l-.05-.025A4 4 0 0011.055 2H5.64a2 2 0 00-1.962 1.608l-1.2 6A2 2 0 004.44 12H8v4a2 2 0 002 2 1 1 0 001-1v-.667a4 4 0 01.8-2.4l1.4-1.866a4 4 0 00.8-2.4z"
          />
        </svg>
        <p
          class="my-auto"
        >
          100k
        </p>
      </div>
    </div>
    <p
      class="mb-5 text-left"
      data-testid="caption"
    />
    <div
      class="flex-col w-full"
    >
      <p
        class="px-5 py-2 w-full text-left brightness-95 hover:brightness-90 cursor-pointer bg-card_bg rounded-lg select-none"
      >
        Comments ...
      </p>
    </div>
  </div>
</div>
`;

exports[`renders homepage unchanged 1`] = `
<div>
  <div
    class="text-center mt-5"
  >
    <div
      class="mb-5 w-1/4 mx-auto bg-[#4487d4] rounded-lg py-2 cursor-pointer hover:brightness-90"
    >
      <p
        class="text-[20px] text-white"
      >
        POST AN IMAGE
      </p>
    </div>
    <div
      class="mx-auto mb-28 w-2/5 h-1/2 min-h-[500px] bg-card_bg rounded-lg p-5 shadow-lg drop-shadow-md"
    >
      <div
        class="flex mb-5 gap-5"
        data-testid="user"
      >
        <img
          alt=""
          class="w-[50px] h-[50px] rounded-[50%]"
          src="/images/user_icon.png"
        />
        <p
          class="my-auto text-left"
        >
          Username
        </p>
      </div>
      <img
        alt=""
        class="rounded-lg w-fit mb-5"
        data-testid="image"
        src="/images/mountain.jpg"
      />
      <div
        class="flex gap-5 mb-5"
        data-testid="buttons"
      >
        <div
          class="flex gap-1"
        >
          <svg
            class="text-[30px] cursor-pointer rounded-lg align-middle text-gray-800 hover:opacity-75"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z"
            />
          </svg>
          <p
            class="my-auto"
          >
            100k
          </p>
        </div>
        <div
          class="flex gap-1"
        >
          <svg
            class="text-[30px] cursor-pointer rounded-lg align-middle text-gray-800 hover:opacity-75"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 9.5a1.5 1.5 0 11-3 0v-6a1.5 1.5 0 013 0v6zM14 9.667v-5.43a2 2 0 00-1.105-1.79l-.05-.025A4 4 0 0011.055 2H5.64a2 2 0 00-1.962 1.608l-1.2 6A2 2 0 004.44 12H8v4a2 2 0 002 2 1 1 0 001-1v-.667a4 4 0 01.8-2.4l1.4-1.866a4 4 0 00.8-2.4z"
            />
          </svg>
          <p
            class="my-auto"
          >
            100k
          </p>
        </div>
      </div>
      <p
        class="mb-5 text-left"
        data-testid="caption"
      >
        Best Image
      </p>
      <div
        class="flex-col w-full"
      >
        <p
          class="px-5 py-2 w-full text-left brightness-95 hover:brightness-90 cursor-pointer bg-card_bg rounded-lg select-none"
        >
          Comments ...
        </p>
      </div>
    </div>
    <div
      class="mx-auto mb-28 w-2/5 h-1/2 min-h-[500px] bg-card_bg rounded-lg p-5 shadow-lg drop-shadow-md"
    >
      <div
        class="flex mb-5 gap-5"
        data-testid="user"
      >
        <img
          alt=""
          class="w-[50px] h-[50px] rounded-[50%]"
          src="/images/user_icon.png"
        />
        <p
          class="my-auto text-left"
        >
          Username
        </p>
      </div>
      <img
        alt=""
        class="rounded-lg w-fit mb-5"
        data-testid="image"
        src="/images/mountain.jpg"
      />
      <div
        class="flex gap-5 mb-5"
        data-testid="buttons"
      >
        <div
          class="flex gap-1"
        >
          <svg
            class="text-[30px] cursor-pointer rounded-lg align-middle text-gray-800 hover:opacity-75"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z"
            />
          </svg>
          <p
            class="my-auto"
          >
            100k
          </p>
        </div>
        <div
          class="flex gap-1"
        >
          <svg
            class="text-[30px] cursor-pointer rounded-lg align-middle text-gray-800 hover:opacity-75"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 9.5a1.5 1.5 0 11-3 0v-6a1.5 1.5 0 013 0v6zM14 9.667v-5.43a2 2 0 00-1.105-1.79l-.05-.025A4 4 0 0011.055 2H5.64a2 2 0 00-1.962 1.608l-1.2 6A2 2 0 004.44 12H8v4a2 2 0 002 2 1 1 0 001-1v-.667a4 4 0 01.8-2.4l1.4-1.866a4 4 0 00.8-2.4z"
            />
          </svg>
          <p
            class="my-auto"
          >
            100k
          </p>
        </div>
      </div>
      <p
        class="mb-5 text-left"
        data-testid="caption"
      >
        Best Image
      </p>
      <div
        class="flex-col w-full"
      >
        <p
          class="px-5 py-2 w-full text-left brightness-95 hover:brightness-90 cursor-pointer bg-card_bg rounded-lg select-none"
        >
          Comments ...
        </p>
      </div>
    </div>
    <div
      class="mx-auto mb-28 w-2/5 h-1/2 min-h-[500px] bg-card_bg rounded-lg p-5 shadow-lg drop-shadow-md"
    >
      <div
        class="flex mb-5 gap-5"
        data-testid="user"
      >
        <img
          alt=""
          class="w-[50px] h-[50px] rounded-[50%]"
          src="/images/user_icon.png"
        />
        <p
          class="my-auto text-left"
        >
          Username
        </p>
      </div>
      <img
        alt=""
        class="rounded-lg w-fit mb-5"
        data-testid="image"
        src="/images/mountain.jpg"
      />
      <div
        class="flex gap-5 mb-5"
        data-testid="buttons"
      >
        <div
          class="flex gap-1"
        >
          <svg
            class="text-[30px] cursor-pointer rounded-lg align-middle text-gray-800 hover:opacity-75"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z"
            />
          </svg>
          <p
            class="my-auto"
          >
            100k
          </p>
        </div>
        <div
          class="flex gap-1"
        >
          <svg
            class="text-[30px] cursor-pointer rounded-lg align-middle text-gray-800 hover:opacity-75"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 9.5a1.5 1.5 0 11-3 0v-6a1.5 1.5 0 013 0v6zM14 9.667v-5.43a2 2 0 00-1.105-1.79l-.05-.025A4 4 0 0011.055 2H5.64a2 2 0 00-1.962 1.608l-1.2 6A2 2 0 004.44 12H8v4a2 2 0 002 2 1 1 0 001-1v-.667a4 4 0 01.8-2.4l1.4-1.866a4 4 0 00.8-2.4z"
            />
          </svg>
          <p
            class="my-auto"
          >
            100k
          </p>
        </div>
      </div>
      <p
        class="mb-5 text-left"
        data-testid="caption"
      >
        Best Image
      </p>
      <div
        class="flex-col w-full"
      >
        <p
          class="px-5 py-2 w-full text-left brightness-95 hover:brightness-90 cursor-pointer bg-card_bg rounded-lg select-none"
        >
          Comments ...
        </p>
      </div>
    </div>
  </div>
</div>
`;
